test/good/arrays/comprehension04.px

print [for x in 1...10^^6 if x %% 2 yield not true].length
print [for x in 1...10^^7 if not x %% 2 yield x][1234567]
