test/bad/arrays/comprehension04.px

[for x in 2..1 if 0 yield false]
